@@ -1,3 +1,5 @@
+- Updated the database creation scripts (no more automatic initialization)
+
 2013-03- 25, Version 1.1
 
 - Removed obsolete mysql_* function calls (YM - issue #25)
